# identicon-service

./: Cargo.toml  package.json  serverless.yml
hasher/: Cargo.toml
hasher/src/: main.rs
visualizer/: Cargo.toml
visualizer/src/: main.rs
